--- a/result/2022-01-14.md
+++ b/result/2022-01-14.md
@@ -39,18 +39,19 @@
 39. [存放鸡蛋要大头朝上](https://s.weibo.com//weibo?q=%23%E5%AD%98%E6%94%BE%E9%B8%A1%E8%9B%8B%E8%A6%81%E5%A4%A7%E5%A4%B4%E6%9C%9D%E4%B8%8A%23&Refer=top) 163952
 40. [小时候的友情最珍贵](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E6%97%B6%E5%80%99%E7%9A%84%E5%8F%8B%E6%83%85%E6%9C%80%E7%8F%8D%E8%B4%B5%23&Refer=top) 161232
 41. [南京通报一医院工作人员核酸异常情况](https://s.weibo.com//weibo?q=%23%E5%8D%97%E4%BA%AC%E9%80%9A%E6%8A%A5%E4%B8%80%E5%8C%BB%E9%99%A2%E5%B7%A5%E4%BD%9C%E4%BA%BA%E5%91%98%E6%A0%B8%E9%85%B8%E5%BC%82%E5%B8%B8%E6%83%85%E5%86%B5%23&Refer=top) 160361
-42. [漂染后的血泪分享](https://s.weibo.com//weibo?q=%23%E6%BC%82%E6%9F%93%E5%90%8E%E7%9A%84%E8%A1%80%E6%B3%AA%E5%88%86%E4%BA%AB%23&Refer=top) 151040
-43. [威姆斯韩德君冲突](https://s.weibo.com//weibo?q=%23%E5%A8%81%E5%A7%86%E6%96%AF%E9%9F%A9%E5%BE%B7%E5%90%9B%E5%86%B2%E7%AA%81%23&Refer=top) 144486
-44. [南京西路优衣库](https://s.weibo.com//weibo?q=%E5%8D%97%E4%BA%AC%E8%A5%BF%E8%B7%AF%E4%BC%98%E8%A1%A3%E5%BA%93&Refer=top) 137285
+42. [南京西路优衣库](https://s.weibo.com//weibo?q=%E5%8D%97%E4%BA%AC%E8%A5%BF%E8%B7%AF%E4%BC%98%E8%A1%A3%E5%BA%93&Refer=top) 153903
+43. [漂染后的血泪分享](https://s.weibo.com//weibo?q=%23%E6%BC%82%E6%9F%93%E5%90%8E%E7%9A%84%E8%A1%80%E6%B3%AA%E5%88%86%E4%BA%AB%23&Refer=top) 151040
+44. [威姆斯韩德君冲突](https://s.weibo.com//weibo?q=%23%E5%A8%81%E5%A7%86%E6%96%AF%E9%9F%A9%E5%BE%B7%E5%90%9B%E5%86%B2%E7%AA%81%23&Refer=top) 144486
 45. [2022春节档已有11部电影](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%B7%B2%E6%9C%8911%E9%83%A8%E7%94%B5%E5%BD%B1%23&Refer=top) 135968
-46. [街头小吃百分之九十都有它](https://s.weibo.com//weibo?q=%23%E8%A1%97%E5%A4%B4%E5%B0%8F%E5%90%83%E7%99%BE%E5%88%86%E4%B9%8B%E4%B9%9D%E5%8D%81%E9%83%BD%E6%9C%89%E5%AE%83%23&Refer=top) 114345
-47. [CBA](https://s.weibo.com//weibo?q=CBA&Refer=top) 107847
-48. [海外战疫有多佛](https://s.weibo.com//weibo?q=%23%E6%B5%B7%E5%A4%96%E6%88%98%E7%96%AB%E6%9C%89%E5%A4%9A%E4%BD%9B%23&Refer=top) 105953
-49. [深圳新增1例无症状为超市员工](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E6%96%B0%E5%A2%9E1%E4%BE%8B%E6%97%A0%E7%97%87%E7%8A%B6%E4%B8%BA%E8%B6%85%E5%B8%82%E5%91%98%E5%B7%A5%23&Refer=top) 80402
+46. [海外战疫有多佛](https://s.weibo.com//weibo?q=%23%E6%B5%B7%E5%A4%96%E6%88%98%E7%96%AB%E6%9C%89%E5%A4%9A%E4%BD%9B%23&Refer=top) 135079
+47. [街头小吃百分之九十都有它](https://s.weibo.com//weibo?q=%23%E8%A1%97%E5%A4%B4%E5%B0%8F%E5%90%83%E7%99%BE%E5%88%86%E4%B9%8B%E4%B9%9D%E5%8D%81%E9%83%BD%E6%9C%89%E5%AE%83%23&Refer=top) 128814
+48. [CBA](https://s.weibo.com//weibo?q=CBA&Refer=top) 107847
+49. [深圳新增1例无症状为超市员工](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E6%96%B0%E5%A2%9E1%E4%BE%8B%E6%97%A0%E7%97%87%E7%8A%B6%E4%B8%BA%E8%B6%85%E5%B8%82%E5%91%98%E5%B7%A5%23&Refer=top) 105129
 50. [想拥有这样一张嘴](https://s.weibo.com//weibo?q=%23%E6%83%B3%E6%8B%A5%E6%9C%89%E8%BF%99%E6%A0%B7%E4%B8%80%E5%BC%A0%E5%98%B4%23&Refer=top) 73010
 51. [上海新增一处中风险地区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E4%B8%80%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 71625
-52. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
-53. [冬天和桂圆乌龙茶有多配](https://s.weibo.com//weibo?q=%23%E5%86%AC%E5%A4%A9%E5%92%8C%E6%A1%82%E5%9C%86%E4%B9%8C%E9%BE%99%E8%8C%B6%E6%9C%89%E5%A4%9A%E9%85%8D%23&Refer=top) 44516
-54. [接收快递要洗手](https://s.weibo.com//weibo?q=%23%E6%8E%A5%E6%94%B6%E5%BF%AB%E9%80%92%E8%A6%81%E6%B4%97%E6%89%8B%23&Refer=top) 38092
-55. [奉劝山姆等企业别割自己肉去贴美国脸](https://s.weibo.com//weibo?q=%23%E5%A5%89%E5%8A%9D%E5%B1%B1%E5%A7%86%E7%AD%89%E4%BC%81%E4%B8%9A%E5%88%AB%E5%89%B2%E8%87%AA%E5%B7%B1%E8%82%89%E5%8E%BB%E8%B4%B4%E7%BE%8E%E5%9B%BD%E8%84%B8%23&Refer=top) 37278
-56. [WBG WE](https://s.weibo.com//weibo?q=WBG%20WE&Refer=top) 30508
+52. [奉劝山姆等企业别割自己肉去贴美国脸](https://s.weibo.com//weibo?q=%23%E5%A5%89%E5%8A%9D%E5%B1%B1%E5%A7%86%E7%AD%89%E4%BC%81%E4%B8%9A%E5%88%AB%E5%89%B2%E8%87%AA%E5%B7%B1%E8%82%89%E5%8E%BB%E8%B4%B4%E7%BE%8E%E5%9B%BD%E8%84%B8%23&Refer=top) 66311
+53. [山东回应济南违建别墅问题](https://s.weibo.com//weibo?q=%23%E5%B1%B1%E4%B8%9C%E5%9B%9E%E5%BA%94%E6%B5%8E%E5%8D%97%E8%BF%9D%E5%BB%BA%E5%88%AB%E5%A2%85%E9%97%AE%E9%A2%98%23&Refer=top) 55245
+54. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
+55. [冬天和桂圆乌龙茶有多配](https://s.weibo.com//weibo?q=%23%E5%86%AC%E5%A4%A9%E5%92%8C%E6%A1%82%E5%9C%86%E4%B9%8C%E9%BE%99%E8%8C%B6%E6%9C%89%E5%A4%9A%E9%85%8D%23&Refer=top) 46155
+56. [接收快递要洗手](https://s.weibo.com//weibo?q=%23%E6%8E%A5%E6%94%B6%E5%BF%AB%E9%80%92%E8%A6%81%E6%B4%97%E6%89%8B%23&Refer=top) 38092
+57. [WBG WE](https://s.weibo.com//weibo?q=WBG%20WE&Refer=top) 30508
