--- a/result/2022-01-14.md
+++ b/result/2022-01-14.md
@@ -1,8 +1,8 @@
 1. [河南新增98例本土确诊](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E6%96%B0%E5%A2%9E98%E4%BE%8B%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A%23&Refer=top) 1800143
 2. [上海疫情](https://s.weibo.com//weibo?q=%E4%B8%8A%E6%B5%B7%E7%96%AB%E6%83%85&Refer=top) 1767232
-3. [推动党史学习教育常态化长效化](https://s.weibo.com//weibo?q=%23%E6%8E%A8%E5%8A%A8%E5%85%9A%E5%8F%B2%E5%AD%A6%E4%B9%A0%E6%95%99%E8%82%B2%E5%B8%B8%E6%80%81%E5%8C%96%E9%95%BF%E6%95%88%E5%8C%96%23&Refer=top) 1324206
-4. [南京西路优衣库](https://s.weibo.com//weibo?q=%E5%8D%97%E4%BA%AC%E8%A5%BF%E8%B7%AF%E4%BC%98%E8%A1%A3%E5%BA%93&Refer=top) 1320101
-5. [深圳卫健委再现霸气回复只为救猫](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%8D%AB%E5%81%A5%E5%A7%94%E5%86%8D%E7%8E%B0%E9%9C%B8%E6%B0%94%E5%9B%9E%E5%A4%8D%E5%8F%AA%E4%B8%BA%E6%95%91%E7%8C%AB%23&Refer=top) 1315483
+3. [深圳卫健委再现霸气回复只为救猫](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%8D%AB%E5%81%A5%E5%A7%94%E5%86%8D%E7%8E%B0%E9%9C%B8%E6%B0%94%E5%9B%9E%E5%A4%8D%E5%8F%AA%E4%B8%BA%E6%95%91%E7%8C%AB%23&Refer=top) 1450080
+4. [推动党史学习教育常态化长效化](https://s.weibo.com//weibo?q=%23%E6%8E%A8%E5%8A%A8%E5%85%9A%E5%8F%B2%E5%AD%A6%E4%B9%A0%E6%95%99%E8%82%B2%E5%B8%B8%E6%80%81%E5%8C%96%E9%95%BF%E6%95%88%E5%8C%96%23&Refer=top) 1324206
+5. [南京西路优衣库](https://s.weibo.com//weibo?q=%E5%8D%97%E4%BA%AC%E8%A5%BF%E8%B7%AF%E4%BC%98%E8%A1%A3%E5%BA%93&Refer=top) 1320101
 6. [绵阳花园小区](https://s.weibo.com//weibo?q=%E7%BB%B5%E9%98%B3%E8%8A%B1%E5%9B%AD%E5%B0%8F%E5%8C%BA&Refer=top) 1301448
 7. [西溪雅苑](https://s.weibo.com//weibo?q=%E8%A5%BF%E6%BA%AA%E9%9B%85%E8%8B%91&Refer=top) 1115409
 8. [被上海中风险奶茶店评论整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E4%B8%8A%E6%B5%B7%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%A5%B6%E8%8C%B6%E5%BA%97%E8%AF%84%E8%AE%BA%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 1033200
@@ -18,7 +18,7 @@
 18. [2022年第一次水逆开始了](https://s.weibo.com//weibo?q=%232022%E5%B9%B4%E7%AC%AC%E4%B8%80%E6%AC%A1%E6%B0%B4%E9%80%86%E5%BC%80%E5%A7%8B%E4%BA%86%23&Refer=top) 661257
 19. [女子投海轻生遇到一整队消防员](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E6%8A%95%E6%B5%B7%E8%BD%BB%E7%94%9F%E9%81%87%E5%88%B0%E4%B8%80%E6%95%B4%E9%98%9F%E6%B6%88%E9%98%B2%E5%91%98%23&Refer=top) 625887
 20. [胡明轩垫脚](https://s.weibo.com//weibo?q=%E8%83%A1%E6%98%8E%E8%BD%A9%E5%9E%AB%E8%84%9A&Refer=top) 613180
-21. [年后再说](https://s.weibo.com//weibo?q=%E5%B9%B4%E5%90%8E%E5%86%8D%E8%AF%B4&Refer=top) 574175
+21. [年后再说](https://s.weibo.com//weibo?q=%E5%B9%B4%E5%90%8E%E5%86%8D%E8%AF%B4&Refer=top) 608550
 22. [天津男子晒家中囤货堪比超市货架](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E7%94%B7%E5%AD%90%E6%99%92%E5%AE%B6%E4%B8%AD%E5%9B%A4%E8%B4%A7%E5%A0%AA%E6%AF%94%E8%B6%85%E5%B8%82%E8%B4%A7%E6%9E%B6%23&Refer=top) 556199
 23. [奉劝山姆等企业别割自己肉去贴美国脸](https://s.weibo.com//weibo?q=%23%E5%A5%89%E5%8A%9D%E5%B1%B1%E5%A7%86%E7%AD%89%E4%BC%81%E4%B8%9A%E5%88%AB%E5%89%B2%E8%87%AA%E5%B7%B1%E8%82%89%E5%8E%BB%E8%B4%B4%E7%BE%8E%E5%9B%BD%E8%84%B8%23&Refer=top) 539329
 24. [中山新增本土确诊1例](https://s.weibo.com//weibo?q=%E4%B8%AD%E5%B1%B1%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A1%E4%BE%8B&Refer=top) 530496
@@ -63,30 +63,33 @@
 63. [舅舅给外甥包50亿红包只值5毛钱](https://s.weibo.com//weibo?q=%23%E8%88%85%E8%88%85%E7%BB%99%E5%A4%96%E7%94%A5%E5%8C%8550%E4%BA%BF%E7%BA%A2%E5%8C%85%E5%8F%AA%E5%80%BC5%E6%AF%9B%E9%92%B1%23&Refer=top) 225718
 64. [夫妻欲离婚丈夫腰藏斧头拉扯妻儿](https://s.weibo.com//weibo?q=%23%E5%A4%AB%E5%A6%BB%E6%AC%B2%E7%A6%BB%E5%A9%9A%E4%B8%88%E5%A4%AB%E8%85%B0%E8%97%8F%E6%96%A7%E5%A4%B4%E6%8B%89%E6%89%AF%E5%A6%BB%E5%84%BF%23&Refer=top) 222828
 65. [辽粤大战](https://s.weibo.com//weibo?q=%23%E8%BE%BD%E7%B2%A4%E5%A4%A7%E6%88%98%23&Refer=top) 215348
-66. [TheShy2022首秀](https://s.weibo.com//weibo?q=%23TheShy2022%E9%A6%96%E7%A7%80%23&Refer=top) 210626
-67. [2022年法考时间明确](https://s.weibo.com//weibo?q=%232022%E5%B9%B4%E6%B3%95%E8%80%83%E6%97%B6%E9%97%B4%E6%98%8E%E7%A1%AE%23&Refer=top) 202646
-68. [为什么如今年味越来越淡了](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E5%A6%82%E4%BB%8A%E5%B9%B4%E5%91%B3%E8%B6%8A%E6%9D%A5%E8%B6%8A%E6%B7%A1%E4%BA%86%23&Refer=top) 194965
-69. [为什么十二生肖里没有猫咪](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E5%8D%81%E4%BA%8C%E7%94%9F%E8%82%96%E9%87%8C%E6%B2%A1%E6%9C%89%E7%8C%AB%E5%92%AA%23&Refer=top) 193899
-70. [上海强调7天健康监测的6个不得](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E5%BC%BA%E8%B0%837%E5%A4%A9%E5%81%A5%E5%BA%B7%E7%9B%91%E6%B5%8B%E7%9A%846%E4%B8%AA%E4%B8%8D%E5%BE%97%23&Refer=top) 190156
-71. [上海一家奶茶店成最小中风险区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E4%B8%80%E5%AE%B6%E5%A5%B6%E8%8C%B6%E5%BA%97%E6%88%90%E6%9C%80%E5%B0%8F%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%8C%BA%23&Refer=top) 188553
-72. [职场人必备的PPT技巧有哪些](https://s.weibo.com//weibo?q=%23%E8%81%8C%E5%9C%BA%E4%BA%BA%E5%BF%85%E5%A4%87%E7%9A%84PPT%E6%8A%80%E5%B7%A7%E6%9C%89%E5%93%AA%E4%BA%9B%23&Refer=top) 186713
-73. [合肥一小区电梯坠落多人受伤](https://s.weibo.com//weibo?q=%23%E5%90%88%E8%82%A5%E4%B8%80%E5%B0%8F%E5%8C%BA%E7%94%B5%E6%A2%AF%E5%9D%A0%E8%90%BD%E5%A4%9A%E4%BA%BA%E5%8F%97%E4%BC%A4%23&Refer=top) 173444
-74. [8090后的童年老物件有多统一](https://s.weibo.com//weibo?q=%238090%E5%90%8E%E7%9A%84%E7%AB%A5%E5%B9%B4%E8%80%81%E7%89%A9%E4%BB%B6%E6%9C%89%E5%A4%9A%E7%BB%9F%E4%B8%80%23&Refer=top) 172073
-75. [东北女子网购金鱼到货冻成冰坨](https://s.weibo.com//weibo?q=%23%E4%B8%9C%E5%8C%97%E5%A5%B3%E5%AD%90%E7%BD%91%E8%B4%AD%E9%87%91%E9%B1%BC%E5%88%B0%E8%B4%A7%E5%86%BB%E6%88%90%E5%86%B0%E5%9D%A8%23&Refer=top) 171539
-76. [愚园路](https://s.weibo.com//weibo?q=%E6%84%9A%E5%9B%AD%E8%B7%AF&Refer=top) 170809
-77. [存放鸡蛋要大头朝上](https://s.weibo.com//weibo?q=%23%E5%AD%98%E6%94%BE%E9%B8%A1%E8%9B%8B%E8%A6%81%E5%A4%A7%E5%A4%B4%E6%9C%9D%E4%B8%8A%23&Refer=top) 163952
-78. [勇士vs雄鹿](https://s.weibo.com//weibo?q=%23%E5%8B%87%E5%A3%ABvs%E9%9B%84%E9%B9%BF%23&Refer=top) 163767
-79. [如何迎战奥密克戎](https://s.weibo.com//weibo?q=%E5%A6%82%E4%BD%95%E8%BF%8E%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E&Refer=top) 162731
-80. [小时候的友情最珍贵](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E6%97%B6%E5%80%99%E7%9A%84%E5%8F%8B%E6%83%85%E6%9C%80%E7%8F%8D%E8%B4%B5%23&Refer=top) 161232
-81. [南京通报一医院工作人员核酸异常情况](https://s.weibo.com//weibo?q=%23%E5%8D%97%E4%BA%AC%E9%80%9A%E6%8A%A5%E4%B8%80%E5%8C%BB%E9%99%A2%E5%B7%A5%E4%BD%9C%E4%BA%BA%E5%91%98%E6%A0%B8%E9%85%B8%E5%BC%82%E5%B8%B8%E6%83%85%E5%86%B5%23&Refer=top) 160361
-82. [过年气氛组图鉴](https://s.weibo.com//weibo?q=%23%E8%BF%87%E5%B9%B4%E6%B0%94%E6%B0%9B%E7%BB%84%E5%9B%BE%E9%89%B4%23&Refer=top) 154260
-83. [漂染后的血泪分享](https://s.weibo.com//weibo?q=%23%E6%BC%82%E6%9F%93%E5%90%8E%E7%9A%84%E8%A1%80%E6%B3%AA%E5%88%86%E4%BA%AB%23&Refer=top) 151040
-84. [威姆斯韩德君冲突](https://s.weibo.com//weibo?q=%23%E5%A8%81%E5%A7%86%E6%96%AF%E9%9F%A9%E5%BE%B7%E5%90%9B%E5%86%B2%E7%AA%81%23&Refer=top) 144486
-85. [2022春节档已有11部电影](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%B7%B2%E6%9C%8911%E9%83%A8%E7%94%B5%E5%BD%B1%23&Refer=top) 135968
-86. [CBA](https://s.weibo.com//weibo?q=CBA&Refer=top) 107847
-87. [想拥有这样一张嘴](https://s.weibo.com//weibo?q=%23%E6%83%B3%E6%8B%A5%E6%9C%89%E8%BF%99%E6%A0%B7%E4%B8%80%E5%BC%A0%E5%98%B4%23&Refer=top) 73010
-88. [上海新增一处中风险地区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E4%B8%80%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 71625
-89. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
-90. [冬天和桂圆乌龙茶有多配](https://s.weibo.com//weibo?q=%23%E5%86%AC%E5%A4%A9%E5%92%8C%E6%A1%82%E5%9C%86%E4%B9%8C%E9%BE%99%E8%8C%B6%E6%9C%89%E5%A4%9A%E9%85%8D%23&Refer=top) 46155
-91. [接收快递要洗手](https://s.weibo.com//weibo?q=%23%E6%8E%A5%E6%94%B6%E5%BF%AB%E9%80%92%E8%A6%81%E6%B4%97%E6%89%8B%23&Refer=top) 38092
-92. [WBG WE](https://s.weibo.com//weibo?q=WBG%20WE&Refer=top) 30508
+66. [西安各高校暂不放寒假](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%90%84%E9%AB%98%E6%A0%A1%E6%9A%82%E4%B8%8D%E6%94%BE%E5%AF%92%E5%81%87%23&Refer=top) 213981
+67. [TheShy2022首秀](https://s.weibo.com//weibo?q=%23TheShy2022%E9%A6%96%E7%A7%80%23&Refer=top) 210626
+68. [2022年法考时间明确](https://s.weibo.com//weibo?q=%232022%E5%B9%B4%E6%B3%95%E8%80%83%E6%97%B6%E9%97%B4%E6%98%8E%E7%A1%AE%23&Refer=top) 202646
+69. [为什么如今年味越来越淡了](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E5%A6%82%E4%BB%8A%E5%B9%B4%E5%91%B3%E8%B6%8A%E6%9D%A5%E8%B6%8A%E6%B7%A1%E4%BA%86%23&Refer=top) 194965
+70. [为什么十二生肖里没有猫咪](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E5%8D%81%E4%BA%8C%E7%94%9F%E8%82%96%E9%87%8C%E6%B2%A1%E6%9C%89%E7%8C%AB%E5%92%AA%23&Refer=top) 193899
+71. [上海一家奶茶店成最小中风险区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E4%B8%80%E5%AE%B6%E5%A5%B6%E8%8C%B6%E5%BA%97%E6%88%90%E6%9C%80%E5%B0%8F%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%8C%BA%23&Refer=top) 192619
+72. [上海强调7天健康监测的6个不得](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E5%BC%BA%E8%B0%837%E5%A4%A9%E5%81%A5%E5%BA%B7%E7%9B%91%E6%B5%8B%E7%9A%846%E4%B8%AA%E4%B8%8D%E5%BE%97%23&Refer=top) 190156
+73. [勇士vs雄鹿](https://s.weibo.com//weibo?q=%23%E5%8B%87%E5%A3%ABvs%E9%9B%84%E9%B9%BF%23&Refer=top) 188857
+74. [职场人必备的PPT技巧有哪些](https://s.weibo.com//weibo?q=%23%E8%81%8C%E5%9C%BA%E4%BA%BA%E5%BF%85%E5%A4%87%E7%9A%84PPT%E6%8A%80%E5%B7%A7%E6%9C%89%E5%93%AA%E4%BA%9B%23&Refer=top) 186713
+75. [开端 中二少年](https://s.weibo.com//weibo?q=%E5%BC%80%E7%AB%AF%20%E4%B8%AD%E4%BA%8C%E5%B0%91%E5%B9%B4&Refer=top) 179441
+76. [合肥一小区电梯坠落多人受伤](https://s.weibo.com//weibo?q=%23%E5%90%88%E8%82%A5%E4%B8%80%E5%B0%8F%E5%8C%BA%E7%94%B5%E6%A2%AF%E5%9D%A0%E8%90%BD%E5%A4%9A%E4%BA%BA%E5%8F%97%E4%BC%A4%23&Refer=top) 173444
+77. [8090后的童年老物件有多统一](https://s.weibo.com//weibo?q=%238090%E5%90%8E%E7%9A%84%E7%AB%A5%E5%B9%B4%E8%80%81%E7%89%A9%E4%BB%B6%E6%9C%89%E5%A4%9A%E7%BB%9F%E4%B8%80%23&Refer=top) 172073
+78. [东北女子网购金鱼到货冻成冰坨](https://s.weibo.com//weibo?q=%23%E4%B8%9C%E5%8C%97%E5%A5%B3%E5%AD%90%E7%BD%91%E8%B4%AD%E9%87%91%E9%B1%BC%E5%88%B0%E8%B4%A7%E5%86%BB%E6%88%90%E5%86%B0%E5%9D%A8%23&Refer=top) 171539
+79. [愚园路](https://s.weibo.com//weibo?q=%E6%84%9A%E5%9B%AD%E8%B7%AF&Refer=top) 170809
+80. [存放鸡蛋要大头朝上](https://s.weibo.com//weibo?q=%23%E5%AD%98%E6%94%BE%E9%B8%A1%E8%9B%8B%E8%A6%81%E5%A4%A7%E5%A4%B4%E6%9C%9D%E4%B8%8A%23&Refer=top) 163952
+81. [如何迎战奥密克戎](https://s.weibo.com//weibo?q=%E5%A6%82%E4%BD%95%E8%BF%8E%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E&Refer=top) 162731
+82. [小时候的友情最珍贵](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E6%97%B6%E5%80%99%E7%9A%84%E5%8F%8B%E6%83%85%E6%9C%80%E7%8F%8D%E8%B4%B5%23&Refer=top) 161232
+83. [南京通报一医院工作人员核酸异常情况](https://s.weibo.com//weibo?q=%23%E5%8D%97%E4%BA%AC%E9%80%9A%E6%8A%A5%E4%B8%80%E5%8C%BB%E9%99%A2%E5%B7%A5%E4%BD%9C%E4%BA%BA%E5%91%98%E6%A0%B8%E9%85%B8%E5%BC%82%E5%B8%B8%E6%83%85%E5%86%B5%23&Refer=top) 160361
+84. [过年气氛组图鉴](https://s.weibo.com//weibo?q=%23%E8%BF%87%E5%B9%B4%E6%B0%94%E6%B0%9B%E7%BB%84%E5%9B%BE%E9%89%B4%23&Refer=top) 154260
+85. [兴业转债](https://s.weibo.com//weibo?q=%E5%85%B4%E4%B8%9A%E8%BD%AC%E5%80%BA&Refer=top) 152285
+86. [漂染后的血泪分享](https://s.weibo.com//weibo?q=%23%E6%BC%82%E6%9F%93%E5%90%8E%E7%9A%84%E8%A1%80%E6%B3%AA%E5%88%86%E4%BA%AB%23&Refer=top) 151040
+87. [威姆斯韩德君冲突](https://s.weibo.com//weibo?q=%23%E5%A8%81%E5%A7%86%E6%96%AF%E9%9F%A9%E5%BE%B7%E5%90%9B%E5%86%B2%E7%AA%81%23&Refer=top) 144486
+88. [2022春节档已有11部电影](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%B7%B2%E6%9C%8911%E9%83%A8%E7%94%B5%E5%BD%B1%23&Refer=top) 135968
+89. [CBA](https://s.weibo.com//weibo?q=CBA&Refer=top) 107847
+90. [想拥有这样一张嘴](https://s.weibo.com//weibo?q=%23%E6%83%B3%E6%8B%A5%E6%9C%89%E8%BF%99%E6%A0%B7%E4%B8%80%E5%BC%A0%E5%98%B4%23&Refer=top) 73010
+91. [上海新增一处中风险地区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E4%B8%80%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 71625
+92. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
+93. [冬天和桂圆乌龙茶有多配](https://s.weibo.com//weibo?q=%23%E5%86%AC%E5%A4%A9%E5%92%8C%E6%A1%82%E5%9C%86%E4%B9%8C%E9%BE%99%E8%8C%B6%E6%9C%89%E5%A4%9A%E9%85%8D%23&Refer=top) 46155
+94. [接收快递要洗手](https://s.weibo.com//weibo?q=%23%E6%8E%A5%E6%94%B6%E5%BF%AB%E9%80%92%E8%A6%81%E6%B4%97%E6%89%8B%23&Refer=top) 38092
+95. [WBG WE](https://s.weibo.com//weibo?q=WBG%20WE&Refer=top) 30508
